[tool.poetry]
name = "fp-mara"
version = "0.1.0"
description = ""
authors = ["zzfab <fabio.gruschka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pettingzoo = "^1.24.3"
pandas = "^2.2.2"
mlx = "^0.10.0"
jupyter = "^1.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
